# nagi

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.bat  deps.ps1
data/: nagi.gresource.xml
data/ui/: #DialogPreferences.ui#  DialogPreferences.ui  WidgetAnimeBig.ui  WidgetAnimeSmall.ui  WidgetMangaBig.ui  WidgetMangaSmall.ui  WindowNagi.ui
resources/share/gtk-3.0/: settings.ini
src/: Nagi.cpp
src/nagi/: ApplicationNagi.cpp  ApplicationNagi.hpp
src/nagi/gui/: ApplicationWindowNagi.cpp  ApplicationWindowNagi.hpp  Resource.c
src/nagi/gui/widgets/: WidgetAnimeBig.cpp  WidgetAnimeBig.hpp  WidgetMangaBig.cpp  WidgetMangaBig.hpp
src/nagi/json/: NagiJSON.cpp  NagiJSON.hpp
